# jupyterlab-llm-assistant

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  Untitled.ipynb  dockerfile  install.json  package-lock.json  package.json  pyproject.toml  test_plan_parser.py  tsconfig.json
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  publish.yml
docs/: QUICKSTART.md  SECURITY.md  build-and-publish.md
docs/plans/: 2026-03-27-config-reload-design.md  2026-03-27-config-reload-plan.md
jupyterlab_llm_assistant/: __init__.py  agent_handler.py  agent_loop.py  agent_tools.py  context_handler.py  handlers.py  llm_client.py  memory_handler.py  plan_handler.py  providers.json  serverextension.py  skill_resolver.py  workspace_handler.py
jupyterlab_llm_assistant/labextension/: build_log.json  package.json
lib/: index.d.ts  index.d.ts.map  index.js  index.js.map
lib/components/: ChatPanel.d.ts  ChatPanel.d.ts.map  ChatPanel.js  ChatPanel.js.map  CodeBlock.d.ts  CodeBlock.d.ts.map  CodeBlock.js  CodeBlock.js.map  InputArea.d.ts  InputArea.d.ts.map  InputArea.js  InputArea.js.map  MarkdownRenderer.d.ts  MarkdownRenderer.d.ts.map  MarkdownRenderer.js  MarkdownRenderer.js.map  MessageItem.d.ts  MessageItem.d.ts.map  MessageItem.js  MessageItem.js.map  MessageList.d.ts  MessageList.d.ts.map  MessageList.js  MessageList.js.map  SettingsPanel.d.ts  SettingsPanel.d.ts.map  SettingsPanel.js  SettingsPanel.js.map  icons.d.ts  icons.d.ts.map  icons.js  icons.js.map
lib/models/: chat.d.ts  chat.d.ts.map  chat.js  chat.js.map  settings.d.ts  settings.d.ts.map  settings.js  settings.js.map  types.d.ts  types.d.ts.map  types.js
lib/services/: api.d.ts  api.d.ts.map  api.js  api.js.map
lib/widgets/: LLMAssistantPanel.d.ts  LLMAssistantPanel.d.ts.map  LLMAssistantPanel.js  (+1 more)
schema/: llm-assistant.json  plugin.json
scripts/: deploy.js
src/: index.ts
style/: agent.css  chat.css  index.css  memory.css  plan.css  skill.css
tests/: test_api_key_full.py  test_api_key_persistence.py  test_backend_loading.py  test_config_llm.py  test_config_management.py  test_context_compression.py  test_new_features.py  test_persistence_logic.ts  test_save_config_direct.py  test_v070_workspace.py
(+41 files in other folders)
